--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,29 @@
  *= require_tree .
  *= require_self
  */
+
+header {
+  width: 100%;
+  border-bottom: 1px solid black;
+  background: #5bc5a7;
+  box-shadow: 0 0 3px black;
+  color: #000;
+  height: 50px;
+  /* display: flex; */
+}
+
+h1 {
+  color: white;
+  font-family: sans-serif;
+  font-size: 25px;
+  padding: 8px;
+  letter-spacing: 8px;
+}
+
+.IOU-header {
+  text-decoration: none;
+}
+
+.login-signup {
+  color: white;
+}
