--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,7 +21,8 @@ header {
   box-shadow: 0 0 3px black;
   color: #000;
   height: 50px;
-  /* display: flex; */
+  display: flex;
+  justify-content: space-between;
 }
 
 h1 {
@@ -32,14 +33,38 @@ h1 {
   letter-spacing: 8px;
 }
 
+.header-link {
+  align-items: center;
+  height: 50px;
+  width: auto;
+}
+
 .IOU-header {
   text-decoration: none;
+  color: white;
+  font-size: 35px;
 }
 
 .login-signup {
   color: white;
+  list-style: none;
+  display: flex;
 }
 
-div {
-  display: flex;
+.signup-welcome {
+  z-index: 999;
+  list-style: none;
+  height: 50px;
+  text-align: center;
+  display: block;
+}
+
+.signup-page-logo {
+  height:200px;
+  width: auto;
+
+}
+
+.signup-hi {
+  color: grey;
 }
