--- a/app/assets/stylesheets/signup-page.css
+++ b/app/assets/stylesheets/signup-page.css
@@ -46,6 +46,7 @@
 
 .signup-introduce {
   color: grey;
+  font-size: 16px;
   /* text-shadow: 0 -.3px 0 yellow, .4px 0 0 lightblue; */
 }
 
@@ -92,4 +93,30 @@
 
 .signup-page-logo {
   margin-right: 25px;
+}
+
+.signup-form-errors {
+  background-color: rgb(202,	60,	85);
+  /* border: 1px solid rgb(187, 51, 68); */
+  color:white;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 362px;
+  font-size: 18px;
+  text-shadow: 0px -1px 0px rgb(154, 42, 56);
+  padding: 5px 10px 5px 10px;
+  line-height: 36px;
+  font-weight: 700;
+}
+
+.signup-form-errors ul {
+  font-size: 18px;
+  line-height: 24px;
+  list-style-type: disc;
+  list-style-position: outside;
+  margin-left: 50px;
+  font-weight:normal;
+  text-shadow: 0px -1px 0px rgb(154, 42, 56);
+  text-align: left;
 }
