--- a/app/assets/stylesheets/login-modal.css
+++ b/app/assets/stylesheets/login-modal.css
@@ -20,9 +20,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  /* align-items: center; */
+  align-items: center;
   /* text-align: center; */
   line-height: 18px;
+  width: 245px;
+  height: 160px;
 }
 
 .login-submit-button {
@@ -36,9 +38,11 @@
   color: white;
   box-shadow: inset 0px 1px 0px rgb(128,	211,	185	), 0 1px 2px 1px rgba(0,0,0,0.2);
   background: #5bc5a7;
-  width: 200px;
+  width: 185px;
   margin-top: 5px;
-  margin-left: 7.5px;
+  margin-bottom: 5px;
+  text-align: center;
+  /* margin-left: 7.5px; */
 }
 
 .login-modal-email-input, .login-modal-password-input {
@@ -49,9 +53,13 @@
   box-shadow: inset 0px 1px 0px rgb(237,	237,	237);
   transition: border .5s ease-in-out;
   padding: 7px;
-  width: 240px;
+  width: 220px;
   height: 28px;
-  margin: 5px;
+  margin: 8px;
+}
+
+.login-modal-email-input {
+  margin-top: 3px;
 }
 
 .login-modal-email-input:focus, .login-modal-password-input:focus {
