--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -129,6 +129,15 @@ h1 {
   padding: 10px;
 }
 
+.modal-background {
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   left: 0;
+   background: transparent;
+   z-index: 10;
+ }
 
 .login-signup {
   color: white;
