--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -31,7 +31,7 @@ input[type="email"],
 input[type="text"],
 input[type="submit"],
 textarea,
-button { 
+button {
   -webkit-appearance: none;
   -moz-appearance: none;
 }
@@ -39,4 +39,8 @@ button {
 button,
 input[type="submit"] {
   cursor: pointer;
+}
+
+* {
+  z-index: 1;
 }
