--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -77,6 +77,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-size: 13px;
   color: rgb(153,	153,	153);
+  width: 100%;
+  height: 68%;
+  border-right: 1px solid rgb(221, 221, 221)
 }
