--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -84,3 +84,13 @@
   height: 68%;
   border-right: 1px solid rgb(221, 221, 221)
 }
+
+#green {
+  color: rgb(81,	197,	169);
+  text-rendering: optimizeLegibility;
+}
+
+#orange {
+  color: rgb(253,	98,	60);
+  text-rendering: optimizeLegibility;
+}
