change migrations, remove billjoin table for owed_at_creation column in bill table add bill modal component

--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -94,3 +94,14 @@
   color: rgb(253,	98,	60);
   text-rendering: optimizeLegibility;
 }
+
+.grey-modal-background {
+  opacity: .8;
+  background-color: #eee;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
+}
