--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -151,7 +151,8 @@ body {
   font-family: 'Lato','Helvetica Neue',Helvetica,Arial,sans-serif;
   margin: 0px;
   padding: 0px;
-  text-shadow: 0 -.15px 0 rgb(220,	178,	140), .2px 0 0 rgb(117,	154,	192);
+  text-rendering: optimizeLegibility;
+  /* text-shadow: 0 -.15px 0 rgb(220,	178,	140), .2px 0 0 rgb(117,	154,	192); */
 }
 
 input {
