--- a/app/assets/stylesheets/friends-menu.css
+++ b/app/assets/stylesheets/friends-menu.css
@@ -14,6 +14,10 @@
 
 }
 
+.friends-menu-header button:hover {
+  color: rgb(96,	200,	167);
+}
+
 .friends-menu-header i {
   margin-right: 3px;
 }
@@ -31,4 +35,9 @@
 
 .friends-menu-div ul li i {
   margin-right: 5px;
+}
+
+.friends-menu-header:hover, .friends-menu-div ul li:hover {
+  color: rgb(102, 102, 102);
+  background: rgb(238, 238, 238);
 }
