--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -37,3 +37,175 @@
   padding-left: 10px;
   font-weight: 700;
 }
+
+.with-you-and {
+  padding: 5px 5px 5px 10px;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  font-size: 14px;
+  align-items: center;
+}
+
+.create-bill-modal-div {
+  height: 400px;
+  width: 350px;
+}
+
+.create-bill-form {
+  width: 100%;
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+}
+
+.create-bill-user-search {
+  width: 216px;
+  height: 26px;
+  margin-left: 10px;
+  border: 1px solid transparent;
+}
+
+.img-description-div {
+  display: flex;
+  margin-top: 15px;
+  align-items: center;
+}
+
+.img-description-div img {
+  margin-left: 35px;
+  margin-right: 15px;
+  height: 84px;
+  width: 50px;
+}
+
+.create-bill-description {
+  height: 24px;
+  width: 177px;
+  border: 1px solid transparent;
+  border-bottom: 1px dashed #ccc;
+}
+
+.create-bill-amount-label {
+  border-bottom: 1px dashed #ccc;
+  display: flex;
+  align-items: flex-start;
+  font-size: 36px;
+}
+
+
+.description-amount-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.create-bill-description {
+  font-size: 20px;
+
+}
+
+.img-description-div input::placeholder, .create-bill-user-search::placeholder, .owing-person-owes::placeholder{
+  color: rgb(221,	221,	221);
+}
+
+.paid-by {
+
+}
+
+.create-bill-amount {
+  font-size: 36px;
+  border: 1px solid transparent;
+  width: 160px;
+  height: 90%;
+  border-bottom: 1px dashed #ccc;
+}
+
+.paid-by-div {
+  margin: 20px;
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+}
+
+.paid-by-div select {
+  border: 1px dashed rgb(204,	204,	204);
+  background: rgb(246,	246,	246);
+  color: rgb(111,	200,	167);
+  border-radius: 20px;
+  text-align: center;
+  padding-left: 5px;
+  height: 30px;
+}
+
+.paid-by-div select option {
+  color: rgb(111,	200,	167);
+  background: rgb(246,	246,	246);
+}
+
+
+.paid-by-div div {
+  margin: 5px;
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: '';
+}
+
+.owe-amount-div {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.owing-person-owes {
+  border: 1px solid transparent;
+  border-bottom: 1px dashed #ccc;
+  padding-left: 8px;
+}
+
+
+.create-bill-cancel-button {
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  color: rgb(51, 51, 51);
+  width: 75px;
+  height: 38px;
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+}
+
+.create-bill-save-button {
+  border: 1px solid rgb(86,	180,	150);
+  border-bottom: 1px solid rgb(72,	150,	125);
+  border-radius: 4px;
+  color: white;
+  box-shadow: inset 0px 1px 0px rgb(128,	211,	185	), 0 1px 2px 1px rgba(0,0,0,0.2);
+  text-shadow: 0 -1px 0 rgb(55, 139, 112);
+  padding: 5px 10px;
+  font-size: 14px;
+  background: #5bc5a7;
+  margin-left: 7px;
+}
+
+.create-bill-save-button:hover {
+  background-color: rgb(79, 193, 157);
+}
+
+.create-bill-cancel-button:hover {
+  background-color: rgb(233, 233, 233);
+}
+
+.create-bill-save-button:active {
+  background-color: rgb(79, 193, 157);
+  box-shadow: inset 0px 0px 5px rgb(71, 173, 143);
+}
+
+.cancel-or-save-buttons-div {
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px 15px 0 15px;
+}
