--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -1,4 +1,6 @@
 
+
+
 .grey-modal-background {
   background: rgba(238,	238,	238, 0.8);
   position: fixed;
@@ -19,6 +21,7 @@
   border: 1px solid rgb(153, 153, 153);
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 8px 0px;
   text-rendering: optimizeLegibility;
+  position: relative;
 }
 
 .create-bill-modal-div h2 {
