--- a/app/assets/stylesheets/dashboard-chart.css
+++ b/app/assets/stylesheets/dashboard-chart.css
@@ -35,10 +35,35 @@
 
 .orange-dashboard-chart div, .green-dashboard-chart div {
   border-radius: 5px;
-  color: black;
+  color: white;
   margin: 7px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 40px;
+}
+
+.dashboard-chart-item-div div {
+  /* font-size: 1vw; */
+}
+
+.orange-dashboard-chart .dashboard-chart-item-div {
+  border: 1px solid rgb(226,	85,	44);
+  border-bottom: 1px solid rgb(189,	71, 37);
+  border-radius: 4px;
+  color: white;
+  text-shadow: 0 -1px 0 rgb(198, 44,3);
+  /* box-shadow: 0 1px 2px 1px rgba(0,0,0,0.2); */
+  background-color: rgb(252,	95 ,49);
+  box-shadow: inset 0px 1px 0px rgb(253,	127,	90), 0 1px 2px 1px rgba(0,0,0,0.2);
+}
+
+.green-dashboard-chart .dashboard-chart-item-div {
+  border: 1px solid rgb(86,	180,	150);
+  border-bottom: 1px solid rgb(72,	150,	125);
+  border-radius: 4px;
+  color: white;
+  box-shadow: inset 0px 1px 0px rgb(128,	211,	185	), 0 1px 2px 1px rgba(0,0,0,0.2);
+  text-shadow: 0 -1px 0 rgb(55, 139, 112);
+  background: #5bc5a7;
 }
