--- a/app/assets/stylesheets/dashboard-chart.css
+++ b/app/assets/stylesheets/dashboard-chart.css
@@ -19,6 +19,11 @@
   align-items: flex-end;
 }
 
+.green-dashboard-chart {
+  display: flex;
+  flex-direction: column;
+}
+
 #icons {
   padding: 3px;
 }
@@ -36,7 +41,7 @@
 .orange-dashboard-chart div, .green-dashboard-chart div {
   border-radius: 5px;
   color: white;
-  margin: 7px;
+  margin: 5px 7px 5px 7px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
