--- a/app/assets/stylesheets/payment-modal.css
+++ b/app/assets/stylesheets/payment-modal.css
@@ -85,6 +85,8 @@
 
 .payment-modal-outer-div {
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .payment-pop-up h3 {
@@ -128,9 +130,26 @@
 .payment-modal-form label {
   font-size: 20px;
   border-bottom: 1px dashed rgb(204, 204,	204);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.payment-modal-form {
+  display: flex;
+  align-items: center;
 }
 
 .payment-modal-form input {
+  margin-left: 10px;
   border: none;
   font-size: 36px;
+  background: transparent;
+  width: 100px;
+}
+
+.payment-button-holder {
+  width: 100%;
+  display:flex;
+  flex-direction: row-reverse;
 }
