--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -56,3 +56,31 @@
   #d {
     /* right: -400px; */
   }
+
+  .footer {
+    margin-top: 200px;
+    background-color: rgb(102,	102,	102);
+    width: 100%;
+    height: 115px;
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer div {
+    width: 75%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+  }
+
+  .footer span {
+    font-size: 24px;
+    width: 40%;
+  }
+
+  .footer ul {
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+  }
