--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -17,10 +17,11 @@
   position: absolute;
   z-index: -1;
   width: 100%;
-  height: 100%;
+  height: 700px;
 }
 
 .dashboard-container {
+  min-height: 100%;
 }
 
 .center-column-header {
