fix homepage image load

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -6,4 +6,9 @@
   <% end %>
 </script>
 
+<script>
+  window.mainLogo1 = "<%= asset_path('homepage1.png') %>"
+  window.mainLogo2 = "<%= asset_path('homepage2.png') %>"
+</script>
+
 <main id="root"></main>
