--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -8,7 +8,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  z-index: 10;
+  z-index: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,6 +22,8 @@
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 8px 0px;
   text-rendering: optimizeLegibility;
   position: relative;
+  right: 616px;
+    top: 167px;
 }
 
 .create-bill-modal-div h2 {
