--- a/app/assets/stylesheets/payment-modal.css
+++ b/app/assets/stylesheets/payment-modal.css
@@ -1,18 +1,21 @@
 .payment-icon {
-  width: 58px;
-  height: 58px;
-  border-radius: 30px;
-  border: 1px solid #999;
-  box-shadow: inset 0 1px 4px rgba(0,0,0,0.3);
+  width: 58px!important;
+  height: 58px!important;
+  border-radius: 30px!important;
+  border: 1px solid #999!important;
+  box-shadow: inset 0 1px 4px rgba(0,0,0,0.3)!important;
 }
 
 .payment-arrow {
-  width: 32px;
-  height: 20px;
+  width: 32px!important;
+  height: 20px!important;
+  border: none!important;
 }
 
 .payment-modal-outer-div {
   background: white;
+  right: 623px;
+  top: 164px;
 }
 
 .payment-modal-header {
@@ -108,12 +111,12 @@
 }
 
 .payment-pop-up img {
-  width: 22px;
-  height: 22px;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  margin-right: 8px;
-  margin-top: -2px;
+  width: 22px!important;
+  height: 22px!important;
+  border: 1px solid #ccc!important;
+  border-radius: 12px!important;
+  margin-right: 8px!important;
+  margin-top: -2px!important;
 }
 
 .payment-modal-form label {
