--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -18,9 +18,18 @@
 #a, #d {
   opacity: .7;
   width: 500px;
+  height: 358.66px!important;
   height: 100%;
   box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 8px 0px;
   transition: 0.3s ease;
+}
+
+#a {
+  /* background-image: url(<%= asset_path 'images/homepage1.png' %>); */
+}
+
+#d {
+  /* background-image: url('./images/homepage2.png'); */
 }
 
 /* #d {
@@ -29,7 +38,7 @@
 
 #a:hover {
   width: 600px;
-  height: 100%;
+  height: 100%!important;
   opacity: 1;
   z-index: 5;
   box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.3);
@@ -41,7 +50,7 @@
   /* position: absolute;
   top: 20px; */
   width: 600px;
-  height: 100%;
+  height: 100%!important;
   opacity: 1;
   z-index: 5;
   box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.3);
