--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -214,3 +214,12 @@ select {
   justify-content: flex-end;
   margin: 15px 15px 0 15px;
 }
+
+.paid-by-bill button{
+  background: rgb(246,	246,	246);
+  border: 1px dashed rgb(204,	204,	204);
+  color: rgb(97,	200,	167);
+  border-radius: 20px;
+  padding: 5px;
+  margin: 5px;
+}
