fix orange chart

--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
+}1
 
 .create-bill-errors {
   background-color: rgb(202,	60,	85);
