--- a/app/assets/stylesheets/dashboard-chart.css
+++ b/app/assets/stylesheets/dashboard-chart.css
@@ -49,7 +49,7 @@
 
 .orange-dashboard-chart .filler-name {
   background: white!important;
-  color: #00000057;
+  color: rgb(148,	148,	163)!important;
   font-size: 12px!important;
   text-shadow: 0.25px 0.25px 1px lightgrey!important;
   margin-right: 50px!important;
@@ -57,7 +57,7 @@
 
 .green-dashboard-chart .filler-name {
   background: white!important;
-  color: #00000057;
+  color: rgb(148,	148,	163)!important;
   font-size: 12px!important;
   text-shadow: 0.25px 0.25px 1px lightgrey!important;
   margin-left: 50px!important;
