--- a/app/assets/stylesheets/friends-menu.css
+++ b/app/assets/stylesheets/friends-menu.css
@@ -49,8 +49,9 @@
 }
 
 #all-friend-selected-sidebar-item, #selected {
-  border-left: 7px solid rgb(96,	200,	173);
+  border-left: 6px solid rgb(96, 200, 173);
   color: rgb(96,	200,	173);
+  padding-left: 2px;
 }
 
 .friend-menu-dashboard-button {
