--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -59,13 +59,16 @@
   font-size: 15px;
 }
 
-.left-column, .right-column {
-  width: 200px;
+.left-column {
+  /*width: 200px;*/
+  width: 15%;
   height: 451px;
 }
 
 .right-column, .friend-show-right-column {
-  width: 240px;
+  /*width: 240px;*/
+  width: 14%;
+  height: 451px;
 }
 
 .center-column {
