--- a/app/assets/stylesheets/create-bill-modal.css
+++ b/app/assets/stylesheets/create-bill-modal.css
@@ -1,6 +1,3 @@
-
-
-
 .grey-modal-background {
   background: rgba(238, 238, 238, 0.8);
   position: fixed;
@@ -12,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}1
+}
 
 .create-bill-errors {
   background-color: rgb(202, 60, 85);
