--- a/app/assets/stylesheets/dashboard.css
+++ b/app/assets/stylesheets/dashboard.css
@@ -250,3 +250,20 @@
   /*color: black;*/
   margin: 10px 50px 20px 50px;
 }
+
+.chart-and-list, .list-and-chart {
+  animation: fadeIn .25s ease-in-out 0s forwards;
+  /*transition: all 0.5s ease-in-out;*/
+}
+
+@keyframes fadeIn {
+  from {
+    opacity:0;
+    /*transform:translateX(50%);*/
+    /*transform:rotate(30deg);*/
+  } to {
+    opacity:1;
+    /*transform:rotate(0deg);*/
+    /*transform:translateX(0%);*/
+  }
+}
